--- a/Отчет по Л1.md
+++ b/Отчет по Л1.md
@@ -142,9 +142,9 @@
 
 <p style="text-indent: 25px;">
 В соответствии с номером варианта была реализована
-HTML-страница index4.html, представляющая структуру разделение окна браузера на фреймы, а также файлы содержимого отдельных фреймов (по одному на каждый фрейм).
+HTML4-страница index4.html, представляющая структуру разделение окна браузера на фреймы, а также файлы содержимого отдельных фреймов (по одному на каждый фрейм).
 
-*[Ссылка на данные фреймы](https://github.com/Virus567/Basic-frontend-dev-labs/tree/lab1)* . 
+*[Ссылка на папку проекта](https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs/tree/lab1/html4-html5)* . 
 <br/>
 <br/>
 <br/>
@@ -185,7 +185,7 @@ https://validator.w3.org/#validate_by_input.
 
 Метод исправления ошибок:
 
-- ошибки (1-7, 9) допущены в связи с использованием типа документа “Strict”. Для исправления ошибок необходимо использовать тип документа “Frameset”;
+- ошибки (1-7, 9) допущены из-за использования типа документа “Strict”. Для исправления ошибок необходимо использовать тип документа “Frameset”;
 
 - ошибка 8 допущена по причине неправильного расположения элемента “noframes”. Для корректной работы данный элемент должен быть вложен в “frameset”.
 
@@ -198,7 +198,7 @@ https://validator.w3.org/#validate_by_input.
 -----
 
 <p style="text-indent: 25px;">
-Задание2: Создайте файл index.html, используя html5 разметку. Файл должен реализовывать предыдущее задание с использованием языка html5. Готовым решением будет успешное прохождение проверки валидации.
+Задание 2: Создать файл index.html, используя html5 разметку. Файл должен реализовывать предыдущее задание с использованием языка html5. Готовым решением будет успешное прохождение проверки валидации.
 
 <p style="text-indent: 25px;">
 Файл index.html создан и почти в точности реализует предыдущее задание. Результат валидации представлен на рисунке 5.
@@ -229,7 +229,7 @@ https://validator.w3.org/#validate_by_input.
 -----
 
 <p style="text-indent: 25px;">
-Выводы по эволюции стандарта html5 и принципов преобразования (конвертации) документов из стандарта html 4 в html 5: В стандарте html 5 большинство используемых в HTML 4.01 атрибутов было удалено. Разделение элементов на блочные и строчные используется в спецификации HTML до версии 4.01. В HTML5 эти понятия заменены более сложным набором категорий контента, согласно которым каждый HTML-элемент должен следовать правилам, определяющим, какой контент для него допустим. Главным отличием стандарта html 4 от стандарта html 5 заключается в том что стандарт html 5 ориентирован в большей степени на работу в связке с css, а стандарт html 4  более самостоятелен. 
+Выводы по эволюции стандарта html5 и принципов преобразования документов из стандарта html 4 в html 5: В стандарте html 5 большинство используемых в HTML 4.01 атрибутов было удалено. Разделение элементов на блочные и строчные используется в спецификации HTML до версии 4.01. В HTML5 эти понятия заменены более сложным набором категорий контента, согласно которым каждый HTML-элемент должен следовать правилам, определяющим, какой контент для него допустим. Главным отличием стандарта html 4 от стандарта html 5 заключается в том, что стандарт html 5 ориентирован в большей степени на работу в связке с css, а стандарт html 4 на более самостоятельную работу. 
 
 <br/>
 <br/>
@@ -238,7 +238,7 @@ https://validator.w3.org/#validate_by_input.
 3. Исследовать функциональные возможности инструментов разработчика на стороне браузера
 
 <p style="text-indent: 25px;">
-В рамках лабораторной работы был рассмотрен Google Chrome браузер на основе движка рендеринга chromium. Изучена документация по работе с devtools, а именно описание и ключевые возможности следующих панелей:
+В рамках лабораторной работы был рассмотрен браузер Google Chrome на основе движка рендеринга chromium. Изучена документация по работе с devtools, а именно описание и ключевые возможности следующих панелей:
 
 - панель Elements
 - панель Console
@@ -286,13 +286,13 @@ https://validator.w3.org/#validate_by_input.
 
 Задание 4: *Используя методы разметки текста реализуйте текущее расписание занятий на 2 недели. При реализации необходимо чтобы ссылки на онлайн лекции были меньше и выделены жирным курсивом, фамилия преподавателя была курсивом, а название дисциплины было h4. Использованием стилей недопустимо.*
 
-Задание 4 было успешно выполнено и доступно для просмотра по ссылке https://github.com/Virus567/Basic-frontend-dev-labs.git
+Задание 4 было выполнено и доступно для просмотра по ссылке https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs/tree/lab1/timetable.git
 
 5. Составить отчет по выполненным задачам
 
-Для составления отчета была изучена документация по markdown разметке. Полный список используемой литературы представлен в приложении В.
+Для составления отчета была изучена документация по Markdown разметке. Полный список используемой литературы представлен в приложении В.
 
-Вывод: в ходе работы были изучены типовые элементы структуры html документов и получены навыки в их формировании. Также были исследованы функциональные возможности инструментов разработчика на стороне браузера и язык разметки markdown.
+Вывод: в ходе работы были изучены типовые элементы структуры html документов и получены навыки в их формировании. Также были исследованы функциональные возможности инструментов разработчика на стороне браузера и язык разметки Markdown.
 
 <p align = center>7
 
@@ -307,22 +307,19 @@ https://validator.w3.org/#validate_by_input.
     <html>
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Ведерников Дмитрий Михайлович</title>
+    <title>Бествитский Андрей Александрович</title>
     </head>
-     <frameset rows = "610, *">
-  
-    <frameset cols = "750, *">
-      <frameset rows = "220, *">
-       <frame SRC = "i4-frame1.html" name="number">
-          <frame SRC = "i4-frame4.html" name="list">
-    </frameset>
-      <frame SRC = "i4-frame2.html" name="table">
-    </frameset>
-      <frame SRC = "i4-frame3.html" name="fio">
-    <noframes>
-     Sorry, there is not a frame support in your browser.
-    </noframes> 
-     </frameset>
+    <FRAMESET ROWS="60, *, 60">
+    <FRAME SRC = "i4-top.html" NAME="boot">
+    <FRAMESET COLS="30%, 70%">
+        <FRAME SRC = "i4-menu.html" NAME="left">
+        <FRAME SRC = "i4-text.html" NAME="right">
+    </FRAMESET>
+    <FRAME SRC = "i4-bottom.html" NAME="foot">
+    <NOFRAMES>
+    No frames, sorry :(
+    </NOFRAMES>
+    </FRAMESET>
     </html>
 
 
@@ -342,21 +339,34 @@ __________
 
 <p align = center>Листинг базовой HTML-страница index.html
 
-    <!DOCTYPE html> <!-- Объявление формата документа -->
-    <html>
-    <head> <!-- Техническая информация о документе -->
-    <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
-    <title>Ведерников Дмитрий Михайлович</title> <!-- Задаем заголовок документа -->
-    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
-    <script src="script.js"></script> <!-- Подключаем сценарии -->
-    </head>
-    <body>
-    <table>
-     <tr><td><iframe src="i5-frame1.html" height="220" width="745"></iframe></td><td rowspan=2><iframe src="i5-frame2.html" height="610" width="745"></iframe></td></tr>
-    <tr><td><iframe src="i5-frame4.html" height="380" width="745"></iframe></td></tr>
-    </table>
-     <iframe src="i5-frame3.html" height="105" width="1500"></iframe>
-    </body>
+    <!DOCTYPE html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <title>Бествитский Андрей Александрович</title>
+        </head>
+        <body>
+            <table>
+                <tr>
+                    <td colspan="2">
+                        <iframe src="./i5-top.html" width="1400" height="45"></iframe>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <iframe width="420" height="500" src="./i5-menu.html"></iframe>
+                    </td>
+                    <td>
+                        <iframe width="972" height="500" src="./i5-text.html"></iframe>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <iframe src="./i5-bottom.html" width="1400" height="45"></iframe>
+                    </td>
+                </tr>
+            </table>
+        </body>
     </html>
 
 
@@ -372,11 +382,8 @@ __________
 
 <p align = center>Библиографический список
 
-- <https://githowto.com/ru> 
-- <https://git-scm.com/book/ru/v2> 
 - <http://htmlbook.ru/samhtml/vvedenie-v-html> 
 - <https://html5book.ru/html-html5/> 
-- <https://habr.com/ru/company/simbirsoft/blog/337116/> 
 - <https://gist.github.com/Jekins/2bf2d0638163f1294637> 
 - <https://www.vyatsu.ru/uploads/file/1604/101_2004.pdf>
 
