--- a/Отчет по Л1.md
+++ b/Отчет по Л1.md
@@ -25,7 +25,7 @@
 <p align = right>
 <font size="2">«___» __________ 2021 г.</font>
 
-<p align = center> Методы формирования html5 документов
+<p align = center> Методы формирования HTML5 документов
 
 <p align = center>Отчет по лабораторной работе № 1
 
@@ -107,7 +107,7 @@
 <p style="text-indent: 25px;">
 В соответствии с заданием создан репозиторий на сайте github.com с названием “Basic frontend dev labs”. В нем создана ветка lab1 и директория “bfdLabs”. Директория успешно подключена к репозиторию на github.com.
 
-*[ссылка на репозиторий.](https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs.git)*
+*[Ссылка на репозиторий](https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs.git)*.
 
 2. Изучить структуру html5 документа
 
@@ -144,7 +144,7 @@
 В соответствии с номером варианта была реализована
 HTML4-страница index4.html, представляющая структуру разделение окна браузера на фреймы, а также файлы содержимого отдельных фреймов (по одному на каждый фрейм).
 
-*[Ссылка на папку проекта](https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs/tree/lab1/html4-html5)* . 
+*[Ссылка на папку проекта](https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs/tree/lab1/html4-html5)*. 
 <br/>
 <br/>
 <br/>
