--- a/Отчет по Л1.md
+++ b/Отчет по Л1.md
@@ -77,7 +77,7 @@
 1. Организовать рабочее пространство и процессы разработки html5 документов.
 
 <p style="text-indent: 25px;">
-В ходе организации рабочего пространства был установлен текстовый редактор IDE Visual Studio Code. Также был установлен перечень плагинов:
+В ходе организации рабочего пространства был установлен текстовый редактор Visual Studio Code. Также был установлен перечень плагинов:
 
 - VSCode All Autocomplete
 - Auto Close Tag
@@ -201,7 +201,7 @@ https://validator.w3.org/#validate_by_input.
 Задание 2: Создать файл index.html, используя html5 разметку. Файл должен реализовывать предыдущее задание с использованием языка html5. Готовым решением будет успешное прохождение проверки валидации.
 
 <p style="text-indent: 25px;">
-Файл index.html создан и почти в точности реализует предыдущее задание. Результат валидации представлен на рисунке 5.
+Файл index.html создан и аналогично реализует предыдущее задание. Результат валидации представлен на рисунке 5.
 
 <p align="center">
   <img src=./img/4.png />
