--- a/Отчет по Л1.md
+++ b/Отчет по Л1.md
@@ -105,7 +105,7 @@
 
 -----
 <p style="text-indent: 25px;">
-В соответствии с заданием создан репозиторий на сайте github.com с названием “Basic frontend dev labs”. В нем создана ветка lab1 и директория “bfdLabs”. Директория успешно подключена к репозиторию на github.com.
+В соответствии с заданием создан репозиторий на сайте github.com с названием “Basic frontend dev labs”. В нем создана ветка lab1, также создана директория “bfdLabs”, которая была успешно подключена к репозиторию на Github.
 
 *[Ссылка на репозиторий](https://github.com/andrey-bestvitskiy/Basic-frontend-dev-labs.git)*.
 
